# assistente_ia

./: .gitignore  README.md  makefile  pyproject.toml
assistente_ia/: main.py
assistente_ia/src/: ai_ollama_base.py  ai_personal.py  config.py  file_ingest.py  tempCodeRunnerFile.py
assistente_ia/src/old/: privateGPT.py
