[tool.poetry]
name = "assistente-ia"
version = "0.1.0"
description = ""
authors = ["bruno <b_linhares@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gpt4all = "1.0.8"
chromadb = "0.4.7"
llama-cpp-python = "0.1.81"
urllib3 = "2.0.4"
pymupdf = "1.23.5"
python-dotenv = "1.0.0"
unstructured = "0.10.8"
extract-msg = "0.45.0"
tabulate = "0.9.0"
pandoc = "2.3"
pypandoc = "1.11"
tqdm = "4.66.1"
sentence-transformers = "2.2.2"
markdown = "^3.6"
docx = "^0.2.4"
python-docx = "^1.1.2"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
langchain-cli = "^0.0.24"
ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
